# rsomics-vcf-split-vep

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: annotated.vcf  malformed_csq.vcf
